# cpp-renderer

./: .gitignore  CMakeLists.txt  README.md
renders/: output.ppm
src/: back_wall.h  camera.h  light.h  main.cpp  material.h  object.h  output.ppm  planes.h  ray.h  raytracer  rt  scene.h  sphere.h  utils.h  vec3.h  wall.h
src/math/: ray.h  utils.cpp  vec3.h
src/primitives/: back_wall.h  object.h  plane.h  planes.h  sphere.h  wall.h
src/scene/: camera.h  light.h  scene.h
src/shading/: bxdf.h  lambertian_bxdf.h  material.h
